--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ p {
 }
 
 .square {
-  font-size: 6rem;
+  font-size: 5rem;
   padding: 0.5em;
 }
 
@@ -108,8 +108,8 @@ p {
 
 .square  {
   flex: 0 1 auto;
-  width: 7rem;
-  height: 7rem;
+  width: 6rem;
+  height: 6rem;
   align-items: center;
   display: flex;
   justify-content: center;
@@ -189,7 +189,7 @@ div#winStatement {
   border-radius: 6px;
   color: var(--square-color);
   font-weight: bold;
-  background-color: #fff;
+  background-color: #fff !important;
 }
 
 #reset {
@@ -209,5 +209,9 @@ div#winStatement {
 @media screen and (max-width: 900px) {
   .container {
     min-width: 95%;
+  }
+  h1 {
+    padding: 0.6rem;
+
   }
 }
