--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,7 @@ p {
   background-color: var(--highlighted-color);
   border: 4px inset rgba(220, 220, 200, 0.8); /*#0080ff; */
   box-shadow: 0px 0px 8px 4px rgba(220, 220, 200, 0.8);
+  transform: scale(0.9);
 }
 
 div#winStatement {
