--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,7 @@ body {
 
 h1 {
   font-size: 4.3rem;
-  padding-top: 0.3em;
-  padding-bottom: 0.3em;
+  padding: 0.9em 0;
   margin: 0 auto;
   text-align: center;
 }
@@ -108,8 +107,8 @@ p {
 
 .square  {
   flex: 0 1 auto;
-  width: 6rem;
-  height: 6rem;
+  width: 7rem;
+  height: 7rem;
   align-items: center;
   display: flex;
   justify-content: center;
@@ -176,6 +175,10 @@ p {
   transform: scale(0.9);
 }
 
+.square:visited {
+  background-color: green;
+}
+
 div#winStatement {
   margin-top: 5px;
   text-align: center;
@@ -212,7 +215,7 @@ div#winStatement {
     min-width: 95%;
   }
   h1 {
-    padding: 0.6rem;
+    padding: 1.5rem;
 
   }
 }
