--- a/css/modal.css
+++ b/css/modal.css
@@ -15,13 +15,13 @@
 /* Modal Content/Box */
 .modal-content {
   background-color: #fefefe;
-  margin: 45% auto; /* 15% from the top and centered */
-  padding: 20px;
+  margin: 25% auto; /* 15% from the top and centered */
+  padding: 2em;
   border: 1px solid #888;
   width: 50%; /* Could be more or less, depending on screen size */
   color: var(--main-color);
   text-align: center;
-  border-radius: 15px;
+  border-radius: 1em;
 }
 
 /* The Close Button */
