--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,6 @@
   box-sizing: border-box;
 }
 
-
-
-
 /* colours ************************/
 
 :root {
@@ -16,7 +13,7 @@
   --highlighted-color: #0073e6; /* #004c9a */
   --square-border: #0080ff; /* #feff02 */
   --win: #ff3333;
-  --main-text: #fff;
+  --main-text: #ccc; /* off white */
 }
 
 /* Typography *********************/
@@ -30,7 +27,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(22,22,140,1) 84%, rgb
 
 h1 {
   font-size: 4.3rem;
-  padding: 0.9em 0;
+  padding: 0.7em 0;
   margin: 0 auto;
   text-align: center;
 }
@@ -65,12 +62,55 @@ p {
 
 .container {
   margin: 0 auto;
+  max-width: 600px;
+}
+
+.howto {
+  margin-top: 0.3em;
+  font-size: 1.0rem;
+  padding: 0.2em;
+  color: #555;
+  border-radius: 0.4em;
+  display: block;
+}
+
+.howtobottom {
+  margin-bottom: 4rem;
+}
+
+.howto a {
+  text-decoration: none;
+}
+
+.howto a,
+.howto a:link,
+.howto a:visited,
+.howto a:active {
+  color: #555;
+  text-decoration: none;
+}
+
+.help h1 {
+  font-size: 3rem;
+  color: #ccc;
+}
+
+.help h2 {
+  font-size: 1.8rem;
+  padding: 0.3em;
+  color: #ccc;
+}
+
+.help p {
+  font-size: 1rem;
+  letter-spacing: 0.1rem;
+  line-height: 1.5em;
+  color: #ccc;
 }
 
 #scoreheading {
   text-align: center;
   padding: 0;
-
 }
 
 .tic {
