--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,10 @@ div#winStatement {
   and (max-device-width: 800px)
   and (orientation: landscape) {
     html {
-      font-size: 80%;
+      font-size: 50%;
+    }
+    .help {
+      font-size: 70%;
     }
     .container {
       margin: 0 auto;
