changed max width landscape

--- a/css/style.css
+++ b/css/style.css
@@ -268,12 +268,12 @@ div#winStatement {
   and (max-device-width: 800px)
   and (orientation: landscape) {
     html {
-      font-size: 50%;
+      font-size: 40%;
     }
     .help {
       font-size: 70%;
     }
     .container {
-      margin: 0 auto;
+      max-width: 60%;
     }
 }
