inc font size landscape v3

--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,7 @@ div#winStatement {
     html {
       font-size: 40%;
     }
-    .help>p {
+    div.help > p {
       font-size: 180%;
     }
     .container {
