inc font size landscape v6

--- a/css/style.css
+++ b/css/style.css
@@ -271,7 +271,7 @@ div#winStatement {
       font-size: 40%;
     }
     .howto.howtobottom {
-      font-size: 200%;
+      font-size: 2rem;
     }
     div.help > p {
       font-size: 180%;
