--- a/css/style2.css
+++ b/css/style2.css
@@ -272,7 +272,7 @@ div#winStatement {
   }
 }
 
-@media screen and (max-height: 800px) {
+@media screen and (max-width: 700px) {
   html {
     font-size: 60%;
   }
