--- a/css/style2.css
+++ b/css/style2.css
@@ -272,20 +272,21 @@ div#winStatement {
   }
 }
 
-@media screen and (max-width: 500px) {
+/* @media screen and (max-width: 500px) {
   html {
     font-size: 60%;
   }
   .container {
     padding: 1em;
-    flex-direction: row;
+    /* flex-direction: row; 
   }
-  .header *{
+  .header {
     display: flex;
     justify-content: center;
     font-size: 60%;
   }
 }
+*/
 
  @media only screen
   and (min-device-width: 300px)
