flex for landscape new css v9

--- a/css/style2.css
+++ b/css/style2.css
@@ -288,12 +288,15 @@ div#winStatement {
 }
 */
 
- @media only screen
+ @media screen
   and (min-width: 300px)
   and (max-width: 800px)
   and (orientation: landscape) {
     html {
       font-size: 65%;
+    }
+    body {
+      background-color: green;
     }
     .container {
       flex-direction: row;
