--- a/css/style2.css
+++ b/css/style2.css
@@ -263,14 +263,14 @@ div#winStatement {
   font-size: 1.2rem;
 }
 
-@media screen and (max-width: 900px) {
+/* @media screen and (max-width: 900px) {
   .container {
     width: 95%;
   }
   h1 {
     padding: 1.5rem;
   }
-}
+} */
 
 /* @media screen and (max-width: 500px) {
   html {
