--- a/css/style2.css
+++ b/css/style2.css
@@ -263,16 +263,16 @@ div#winStatement {
   font-size: 1.2rem;
 }
 
-@media screen and (max-width: 900px) {
+/* @media screen and (max-height: 800px) {
   .container {
     width: 95%;
   }
   h1 {
     padding: 1.5rem;
   }
-}
+} */
 
-@media screen and (max-width: 700px) {
+@media screen and (max-height: 700px) {
   html {
     font-size: 60%;
   }
